fix: fix message scrollbar

--- a/app/src/assets/pages/home.less
+++ b/app/src/assets/pages/home.less
@@ -635,9 +635,7 @@
   .chat-content {
     flex-grow: 1;
     width: 100%;
-    overflow-x: hidden;
-    overflow-y: auto;
-    touch-action: pan-y;
+    overflow: hidden;
 
     .chat-messages-wrapper {
       width: 100%;
